--- a/.env-api
+++ b/.env-api
@@ -1,8 +1,8 @@
 SYSTEM_NAME="cron-go-api"
+DEGUB_MODE=true
 DB_HOST=localhost
-DB_PORT=6433
+DB_PORT=6432
 DB_USER=dbuser
 DB_PASS=admin2021
 DB_DATABASE=postgresapi
 PORT=8080
-DEGUB_MODE=false
