--- a/.env-api
+++ b/.env-api
@@ -5,4 +5,6 @@ DB_PORT=6432
 DB_USER=dbuser
 DB_PASS=admin2021
 DB_DATABASE=postgresapi
+ELASTIC_SEARCH_URL=http://localhost:9200
+ELASTIC_APM_SERVER_URL=http://localhost:8200
 PORT=8080
