--- a/.env-api.exemple
+++ b/.env-api.exemple
@@ -5,4 +5,6 @@ DB_USER=dbuser
 DB_PASS=admin2021
 DB_DATABASE=postgresapi
 PORT=8080
+ELASTIC_SEARCH_URL=http://localhost:9200
 DEGUB_MODE=false
+ELASTIC_APM_SERVER_URL=http://localhost:8200
